--- a/api/rider/models/rider.settings.json
+++ b/api/rider/models/rider.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "riders",
   "info": {
-    "name": "Rider"
+    "name": "Rider",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -18,7 +19,35 @@
       "type": "string"
     },
     "nin_number": {
+      "type": "string",
+      "unique": true,
+      "maxLength": 16,
+      "minLength": 16
+    },
+    "initial_deposit": {
+      "type": "biginteger",
+      "default": "0"
+    },
+    "amount_owed": {
+      "type": "biginteger",
+      "default": "0"
+    },
+    "amount_paid": {
+      "type": "biginteger",
+      "default": "0"
+    },
+    "date_registered": {
+      "type": "date"
+    },
+    "phone_number": {
       "type": "string"
+    },
+    "initial_charge": {
+      "type": "biginteger"
+    },
+    "transactions": {
+      "via": "made_by",
+      "collection": "transaction"
     }
   }
 }
