--- a/api/transaction/models/transaction.settings.json
+++ b/api/transaction/models/transaction.settings.json
@@ -18,9 +18,9 @@
     "amount": {
       "type": "biginteger"
     },
-    "made_by": {
-      "model": "rider",
-      "via": "transactions"
+    "rider": {
+      "via": "transactions",
+      "model": "rider"
     }
   }
 }
