added profile-image for riders

--- a/api/rider/models/rider.settings.json
+++ b/api/rider/models/rider.settings.json
@@ -47,6 +47,18 @@
     },
     "balance": {
       "type": "biginteger"
+    },
+    "profile_image": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false,
+      "pluginOptions": {}
     }
   }
 }
