--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "strapi-utils": "3.6.0"
   },
   "author": {
-    "name": "A Strapi developer"
+    "name": "Jonathan Owot"
   },
   "strapi": {
     "uuid": "fbd57b2e-c600-48b1-86d1-1f6788b82930"
